--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Weather",
-  "name": "Untitled Weather App",
+  "name": "React Weather",
   "icons": [
     {
       "src": "favicon.ico",
